@@ -22,7 +22,7 @@
 .\" IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF
 .\" THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd 2014-04-02
+.Dd 2014-07-16
 .Dt clone 1 URM                        \" Program name and manual section number
 .Os FreeBSD, Darwin
 .Sh NAME                               \" Section Header - required - don't modify 
@@ -70,9 +70,11 @@ Verbosity level (default = 1):
 .br
 0 - no output
 .br
-1 - show directory action: add (+), delete (-), keep (=)
+1 - show directory action: '+' for add, '-' for delete, '=' for keep
 .br
-2 - show processed directories
+2 - indicate cloned files by '.'
+.br
+3 - display the path names of cloned file system items
 .It Fl s
 Completely synchronize destination with source.
 .It Fl x Ar exclude-list
